--- a/src/app/pages/admin/assistants/assistant-create-form/assistant-create-form.component.html
+++ b/src/app/pages/admin/assistants/assistant-create-form/assistant-create-form.component.html
@@ -12,7 +12,7 @@
     <mat-form-field color="warn" appearance="fill" class="w-100">
         <mat-label>Seleccione una empresa</mat-label>
         <mat-select formControlName="idCompany" name="idCompany" #selectDesktop matNativeControl required>
-            <mat-option *ngFor="let company of userService.companies" [value]="company._id" (click)="getSkills(company._id)">
+            <mat-option *ngFor="let company of adminService.companies" [value]="company._id" (click)="getSkills(company._id)">
                 {{company.tx_company_name}}
             </mat-option>
         </mat-select>
