--- a/src/app/pages/public/screen/screen.component.css
+++ b/src/app/pages/public/screen/screen.component.css
@@ -4,8 +4,6 @@
   width          : 120px;
 }
 
-
-
 .screen-icon-star {
   cursor   : pointer;
   transform: scale(2);
@@ -19,8 +17,6 @@
   color: orange;
 }
 
-
-
 .button-disabled {
   background-color: #f1f1f1;
   color           : #c7c7c7;
@@ -30,6 +26,30 @@
   font-size:calc(.7em + 1.5vw);
 }
 
+
+/* my ticket rounded */
+.screen-myticket-container {
+  padding: 1.5em;
+  width:12em;
+  height:12em;
+  line-height: 3em;
+  border-radius: 50%;
+  color: darkslategray;
+  background-color: #fcfcfc;
+}
+.screen-myticket-text-header {
+  font-size:1.2em;
+}
+.screen-myticket-text {
+  font-size:3em;
+}
+.screen-myticket-text-alert {
+  opacity: 0;
+}
+.screen-myticket-text-footer {
+  font-size:1em;
+}
+/* ------------------------------------------------------- */
 
 .screen-text-big {
   font-weight: 500;
@@ -48,5 +68,5 @@
 }
 
 .screen-icons {
-  font-size:calc(.8em + 1.5vw);
+  font-size:calc(.8em + .8vw);
 }
