--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div>
     <mat-form-field *ngIf="companies?.length > 0" color="warn" appearance="fill" class="w-100">
         <mat-label>Seleccione una empresa</mat-label>
-        <mat-select formControlName="idCompany" [value]="user.id_company?._id" name="idCompany" #selectDesktop
+        <mat-select formControlName="idCompany" [value]="loginService.user?.id_company?._id" name="idCompany" #selectDesktop
             matNativeControl required>
             <mat-option *ngFor="let company of companies" [value]="company._id" (click)="attachCompany(company)">
                 {{company.tx_company_name}}
@@ -13,7 +13,7 @@
 
 
         <!-- ASSISTANT / USER -->
-        <div *ngFor="let item of userService.menu">
+        <div *ngFor="let item of loginService.menu">
             <mat-expansion-panel [expanded]="item.titulo === 'Asistente'">
 
                 <mat-expansion-panel-header>
@@ -34,7 +34,7 @@
     </mat-accordion>
 
     <!-- LOGOUT -->
-    <div class="p-2 pt-3" *ngIf="userService.logueado">
-        <button class="btn btn-sm btn-block btn-danger" (click)="userService.logout()"> Salir </button>
+    <div class="p-2 pt-3" *ngIf="loginService.user">
+        <button class="btn btn-sm btn-block btn-danger" (click)="loginService.logout()"> Salir </button>
     </div>
 </div>
