--- a/src/app/pages/public/tickets/tickets.component.html
+++ b/src/app/pages/public/tickets/tickets.component.html
@@ -1,7 +1,7 @@
 <div class="saturno-container shadow-box animated fadeIn">
 
 
-    <div *ngIf="ticketsService.companyData">
+    <div *ngIf="publicService.company">
 
       <h5 *ngIf="loading" class="card-title">
         <span id="lblNuevoTicket">
@@ -17,12 +17,12 @@
 
         <div class="card py-4 my-4">
           <p class="text-company">
-            {{ ticketsService.companyData.tx_company_name }}
+            {{ publicService.company.tx_company_name }}
           </p>
           <p style="color: darkblue; font-size: 1rem; font-weight: 400;" class="my-0">
-            {{ ticketsService.companyData.tx_address_street }}
-            {{ ticketsService.companyData.tx_address_number }}
-            {{ ticketsService.companyData.cd_city }}
+            {{ publicService.company.tx_address_street }}
+            {{ publicService.company.tx_address_number }}
+            {{ publicService.company.cd_city }}
           </p>
         </div>
 
